--- a/css/product_management.css
+++ b/css/product_management.css
@@ -285,6 +285,7 @@ input {
   justify-content: space-evenly;
 }
 
+/* MODAL */
 .mod{
   margin-top: -48px;
   background-color: #fff;
@@ -296,21 +297,20 @@ input {
   align-items: center;
 }
 
-.container{
-  height: 100%;
-  background: rgba(0,0,0,.5);
-  position:fixed;
+.loader2 {
+  position: fixed;
+  z-index: 99;
   top: 0;
   left: 0;
-  right: 0;
-  z-index: 2000;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,.5);
   display: none;
   justify-content: center;
   align-items: center;
-  margin: 0;
 }
 
-.container.mostrar {
+.loader2.mostrar {
   display: flex;
 }
 
