--- a/css/product_management.css
+++ b/css/product_management.css
@@ -59,128 +59,7 @@ input {
   margin-bottom: 10px;
 }
 #btnSee {
-  margin-left: 300px;
-}
-.edit {
-  margin-left: 30px;
-}
-.delete {
-  margin-left: 30px;
-}
-.visibility::before {
-  content: url(../images/visibility_white_24dp.svg);
-}
-.edit::before {
-  content: url(../images/create_white_24dp.svg);
-}
-.delete::before {
-  content: url(../images/delete_white_24dp.svg);
-}
-.modal-content {
-  width: 100%;
-}
-.modal-header {
-  background: #085d8c;
-  color: #fff;
-  height: 50px;
-}
-.modal-header h5 {
-  font-size: 24px;
-  font-weight: 700;
-}
-.modal-header .delete {
-  background: none;
-}
-.modal-header .delete::before {
-  content: url(../images/close_white_24dp.svg);
-}
-.modal-body form {
-  display: flex;
-  flex-direction: column;
-  margin-top: 12px;
-}
-.modal-body form h3 {
-  padding-top: 20px;
-  color: black;
-  font-weight: 400;
-  text-align: center;
-}
-.modal-body form input {
-  width: 100%;
-}
-.modal-body form label {
-  font-weight: 600;
-  font-size: 16px;
-  padding: 6px;
-  margin-bottom: 0;
-  color: black;
-}
-.modal-body form h4 {
-  font-weight: 600;
-  font-size: 16px;
-  padding: 6px;
-  margin-bottom: 0;
-  margin-left: 145px;
-  color: black;
-}
-.modal-body form input {
-  border-radius: 4px;
-  border-width: 1px;
-  height: 32px;
-  border-style: solid;
-  border-color: #085d8c;
-}
-#input-sabores-id,
-#input-sabores2-id{
-  width: 80%;
-}
-.modal-body .user-email label {
-  display: flex;
-  width: 100%;
-  flex-wrap: wrap;
-}
-.modal-body .office-access label {
-  align-items: flex-start;
-}
-.modal-body .office-access select {
-  width: 100%;
-}
-.save {
-  display: flex;
-  justify-content: end;
-}
-.save .btn-group {
-  width: 30%;
-  padding-top: 20px;
-}
-#btn_salvar {
-  height: 40px;
-  font-weight: 600;
-  font-size: 16px;
-  background: #085d8c;
-  border: none;
-}
-.alternative {
-  display: flex;
-  justify-content: end;
-  padding-top: 36px;
-}
-.alternative .btn-primary {
-  width: 20%;
-  margin-right: 6px;
-  height: 40px;
-  font-weight: 600;
-  font-size: 16px;
-  background: #085d8c;
-  border: none;
-}
-.alternative .btn-secondary {
-  width: 20%;
-  height: 40px;
-  font-weight: 600;
-  font-size: 16px;
-  background: #a82012;
-  border-color: #892015;
+  margin-left: 100px;
 }
 @media (min-width: 1040px) and (max-width: 1200px) {
   #btnSee {
@@ -240,12 +119,7 @@ input {
     padding-left: 0;
   }
 }
-.edit::before {
-  content: url(../images/create_white_24dp.svg);
-}
-.delete::before {
-  content: url(../images/delete_white_24dp.svg);
-}
+
 .loader {
   position: fixed;
   z-index: 99;
@@ -288,6 +162,7 @@ input {
 /* MODAL */
 .mod{
   margin-top: -48px;
+  margin: 400px;
   background-color: #fff;
   border-radius: 5px;
   display: flex;
