--- a/css/production_management.css
+++ b/css/production_management.css
@@ -89,7 +89,7 @@ table button{
 .modal-body form input{
     width: 100%;
 }
-.modal-body form label {
+.mod form label {
     font-weight: 600;
     font-size: 16px;
     padding: 6px;
@@ -128,28 +128,6 @@ table button{
     font-size: 16px;
     background: #085D8C;
     border: none;
-}
-.alternative{
-    display: flex;
-    justify-content: end;
-    padding-top: 36px;
-}
-.alternative .btn-primary{
-    width: 20%;
-    margin-right: 6px;
-    height: 40px;
-    font-weight:600;
-    font-size: 16px;
-    background: #085D8C;
-    border: none;
-}
-.alternative .btn-secondary{
-    width: 20%;
-    height: 40px;
-    font-weight:600;
-    font-size: 16px;
-    background: #A82012;
-    border-color: #892015;
 }
 @media (min-width: 1040px) and (max-width: 1200px) {
     .visibility{
@@ -209,12 +187,6 @@ table button{
         padding-left: 0;
     }
 }
-.edit::before{
-    content: url(../images/create_white_24dp.svg);
-}
-.delete::before{
-    content: url(../images/delete_white_24dp.svg);
-}
 .loader {
     position: fixed;
     z-index: 99;
@@ -249,3 +221,130 @@ table button{
     border: 1px solid black;
     margin: 10px;
 }
+
+#gridModal{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#btnSee{
+    margin-left: 100px;
+}
+
+/* MODAL */
+.mod{
+    margin-top: -48px;
+    margin: 400px;
+    background-color: #fff;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+  }
+  
+.loader2 {
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+  }
+  
+.loader2 .mostrar {
+    display: flex;
+  }
+  
+@keyframes modal {
+    from {
+        opacity: 0;
+        transform: translate3d(0, -60px, 0);
+    }
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+  }
+  
+.mostrar .mod {
+    animation: modal .3s;
+  }
+  
+.top-modal{
+    display: flex;
+    padding: 18px;
+    background-color: #085D8C;
+    width: 100%;
+    justify-content: space-between;
+  }
+  
+.top-modal h5{
+    color:#fff;
+    font-weight: 700;
+  }
+  
+.fechar{
+    background: none;
+    border: none;
+  }
+  
+.fechar::before{
+    content: url(../images/close_white_24dp.svg);
+  }
+  
+form{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 18px;
+    padding: 12px;
+  }
+form label {
+    font-weight: 600;
+    font-size: 16px;
+    padding: 6px;
+    margin-bottom: 0;
+    color: black;
+  }
+form input {
+    border-radius: 4px;
+    border-width: 1px;
+    height: 32px;
+    border-style: solid;
+    border-color: #085D8C;
+    width: 100%;
+  }
+
+.button{
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    width: 132px;
+    height: 50px;
+    border-radius: 5px;
+  }
+  .button2:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  }
+  #btnSee::before{
+    content: url(../images/visibility_white_24dp.svg);
+  }
+  #btnEdit::before{
+    content: url(../images/edit_white_24dp.svg);
+  }
+  #btnDelete::before{
+    content: url(../images/delete_white_24dp.svg);
+  }
