--- a/css/product_management.css
+++ b/css/product_management.css
@@ -4,8 +4,8 @@
 
 .section-title {
   height: 60px;
-  padding-left: 30px;
-  padding-top: 20px;
+  padding-left: 70px;
+  padding-top: 17px;
 }
 .section-title h2 {
   font-size: 25px;
@@ -17,6 +17,12 @@
 }
 .dataTables_wrapper {
   width: 90%;
+}
+.title{
+  width: 93%;
+}
+.title h2{
+  width: 97%;
 }
 .section-table label {
   margin-bottom: 20px;
