--- a/css/user_registration.css
+++ b/css/user_registration.css
@@ -15,6 +15,12 @@ h2{
     padding: 0px 30px 0px 30px;
     margin-top: 18px;
 }
+.title{
+    width: 90%;
+}
+.title h2{
+    width: 97%;
+}
 
 .form{
     display: flex;
