--- a/css/sale_management.css
+++ b/css/sale_management.css
@@ -48,97 +48,7 @@ table button{
     width: 60px;
     padding: 0;
 }
-.visibility{
-    margin-left: 210px;
-}
-.edit{
-    margin-left: 30px;
-}
-.delete{
-    margin-left: 30px;
-}
-.visibility::before{
-    content: url(../images/visibility_white_24dp.svg);
-}
-.edit::before{
-    content: url(../images/create_white_24dp.svg);
-}
-.delete::before{
-    content: url(../images/delete_white_24dp.svg);
-}
-.modal-header{
-    background: #085D8C;
-    color: #fff;
-    height: 50px;
-}
-.modal-header h5{
-    font-size: 24px;
-    font-weight: 700;
-}
-.modal-header .delete{
-    background: none;
-}
-.modal-header .delete::before{
-    content: url(../images/close_white_24dp.svg);
-}
-.modal-body form{
-    display: flex;
-    flex-direction: column;
-    margin-top: 12px;
-}
-.modal-body form h3{
-    padding-top: 20px;
-    color: black;
-    font-weight: 400;
-    text-align: center;
-}
-.modal-body form input{
-    width: 100%;
-}
-.modal-body form label {
-    font-weight: 600;
-    font-size: 16px;
-    padding: 6px;
-    margin-bottom: 0;
-    color: black;
-}
-.modal-body form input {
-    border-radius: 4px;
-    border-width: 1px;
-    height: 32px;
-    border-style: solid;
-    border-color: #085D8C;
-}
-#div-table, #div-table2{
-    overflow-y: scroll; 
-    height: 265px;
-}
-.user-email table, #thead-vendas, #thead-vendas2{
-    background-color: white;
-    width: 100%;
-}
-#table-vendas,#table-vendas2, #thead-vendas, #thead-vendas2, #tbody-vendas-id, #tbody-vendas-id2, #thead-tr-vendas, #thead-tr-vendas2, input{
-    text-align: center;
-    background-color: white;
-    color: black;
-}
-.tbody-vendas tr{
-    background-color: white;
-}
-.modal-body h4{
-    text-align: center;
-}
-.modal-body .user-email label{
-    display: flex;
-    width: 100%;
-    flex-wrap: wrap;
-}
-.modal-body .office-access label {
-    align-items: flex-start;
-}
-.modal-body .office-access select {
-    width: 100%;
-}
+
 .save{
     display: flex;
     justify-content: end;
@@ -408,20 +318,20 @@ table button{
     content: url(../images/close_white_24dp.svg);
   }
   
-form{
+.mod form{
     display: flex;
     flex-direction: column;
     margin-bottom: 18px;
     padding: 12px;
-  }
-form label {
+}
+.mod form label {
     font-weight: 600;
     font-size: 16px;
     padding: 6px;
     margin-bottom: 0;
     color: black;
-  }
-form input {
+}
+.mod form input {
     border-radius: 4px;
     border-width: 1px;
     height: 32px;
@@ -430,7 +340,7 @@ form input {
     width: 100%;
 }
 
-form table{
+.mod form table{
     overflow-y: scroll;
 }
   
