--- a/css/production_management.css
+++ b/css/production_management.css
@@ -35,7 +35,7 @@
 }
 
 tbody tr{
-    background-color: #ABD2CE;
+    background-color: #f3f3f3;
 }
 thead{
     width: 100%;
@@ -44,7 +44,7 @@ thead{
     font-size: 17px;
 }
 table button{
-    background-color:  #ABD2CE;
+    background-color:  #f3f3f3;
     border: transparent;
     width: 60px;
     padding: 0;
@@ -376,13 +376,15 @@ form input {
   }
 .button2:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-  }
+}
 #btnSee::before{
-    content: url(../images/visibility_white_24dp.svg);
-  }
+    content: url(../images/visibility_black_24dp.svg);
+}
+
 #btnEdit::before{
-    content: url(../images/edit_white_24dp.svg);
-  }
+    content: url(../images/edit_black_24dp.svg);
+}
+
 #btnDelete::before{
-    content: url(../images/delete_white_24dp.svg);
-  }
+    content: url(../images/delete_black_24dp.svg);
+}
