corrigindo espacamento na table

--- a/css/product_management.css
+++ b/css/product_management.css
@@ -26,15 +26,20 @@
   text-align: center;
   padding-left: 85px;
 }
+#saborProduto{
+  padding-top: 25px;
+}
 
 tbody tr {
   background-color: #f3f3f3;
+  text-align: center;
 }
 thead {
   width: 100%;
   background-color: #085d8c;
   color: white;
   font-size: 17px;
+  text-align: center;
 }
 table button {
   background-color: #f3f3f3;
