--- a/css/home.css
+++ b/css/home.css
@@ -225,6 +225,11 @@ a{
     filter: invert(17%) sepia(95%) saturate(2201%) hue-rotate(183deg) brightness(101%) contrast(94%);
 }
 
+.filter-color_icon:hover{
+    border-radius: 5px;
+    opacity: 0.7;
+}
+
 h3{
     font-size: 32px;
     color: #A7C7FF;
