--- a/css/reports_product.css
+++ b/css/reports_product.css
@@ -47,3 +47,15 @@
     width: 40%;
     align-self: center;
 }
+
+.navbar{
+    display: flex;
+    position: fixed;
+    overflow-y: scroll;
+    overflow-x: none;
+    right: 0;
+    width: 10%;
+    height: 30%;
+    flex-direction: column;
+    background: #005DFF;
+}
