--- a/css/reports_product.css
+++ b/css/reports_product.css
@@ -51,11 +51,15 @@
 .navbar{
     display: flex;
     position: fixed;
-    overflow-y: scroll;
-    overflow-x: none;
-    right: 0;
-    width: 10%;
+    top: 200px;
+    right: 30px;
+    width: 5%;
     height: 30%;
     flex-direction: column;
-    background: #005DFF;
+    background: #A7C7FF;
+    border-radius: 5px;
+}
+
+.navbar .icons{
+    filter: invert(14%) sepia(98%) saturate(3821%) hue-rotate(189deg) brightness(90%) contrast(94%);
 }
