--- a/css/historic.css
+++ b/css/historic.css
@@ -3,22 +3,44 @@
 @import url(sale_management.css);
 
 h4{
-    font-size: 20px;
+    font-size: 19px;
     color: white;
+    width: auto;
+    margin-bottom: 0;  
+    font-weight: bold;
 }
 
-#div-titles{
+#div-title{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 35px;
+    align-items: center;
+    justify-content: center;
     background-color: #085D8C;
+}
+#data{
+    width: 33%;
+    padding-right: 80px;
+    text-align: center;
+
+}
+#desc{
+    width: 33%;
+    text-align: center;
+}
+#user{
+    width: 33%;
+    padding-left: 70px;
+    text-align: center;
 }
 
 #div-table{
-    overflow-y: scroll;
-    height: 305px;
+    overflow: auto;
+    height: 350px;
     width: 100%;
 }
-thead tr th{
-    text-align: center;
-}
+
 tbody tr td{
     text-align: center;
 }
