--- a/css/historic.css
+++ b/css/historic.css
@@ -29,7 +29,7 @@ h4{
     width: 33%;
     text-align: center;
 }
-#user{
+#user-table{
     width: 33%;
     padding-left: 70px;
     text-align: center;
