--- a/css/product_management.css
+++ b/css/product_management.css
@@ -22,10 +22,42 @@
   margin-bottom: 20px;
 }
 
-#opcoes {
-  text-align: center;
-  padding-left: 85px;
+h4{
+  font-size: 19px;
+  color: white;
+  width: auto;
+  margin-bottom: 0;  
+  font-weight: bold;
 }
+
+#div-title{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 35px;
+  align-items: center;
+  justify-content: center;
+  background-color: #085D8C;
+}
+#nome{
+  width: 25%;
+  padding-left: 30px;
+  text-align: start;
+
+}
+
+#opcoes{
+  width: 75%;
+  padding-right: 70px;
+  text-align: center;
+}
+
+#div-table{
+  overflow: auto;
+  height: 350px;
+  width: 100%;
+}
+
 #saborProduto{
   padding-top: 25px;
 }
