--- a/css/user_management.css
+++ b/css/user_management.css
@@ -15,9 +15,7 @@
     padding-left: 70px;    
     padding-right: 70px;    
 }
-.dataTables_wrapper{
-    width: 90%;
-}
+
 .title{
     width: 92.5%;
     margin-left: 0;
@@ -28,9 +26,44 @@
 .section-table label{
     margin-bottom: 20px;
 }
+h4{
+    font-size: 19px;
+    color: white;
+    width: auto;
+    margin-bottom: 0;  
+    font-weight: bold;
+}
 
+#div-title{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 35px;
+    align-items: center;
+    justify-content: center;
+    background-color: #085D8C;
+}
+#nome{
+    width: 23%;
+    padding-left: 5px;
+    text-align: start;
+
+}
+#usuario{
+    width: 23%;
+    padding-left: 15px;
+    text-align: start;
+}
 #opcoes{
+    width: 55%;
+    padding-right: 70px;
     text-align: center;
+}
+
+#div-table{
+    overflow: auto;
+    height: 350px;
+    width: 100%;
 }
 
 tbody tr{
