--- a/css/user_registration.css
+++ b/css/user_registration.css
@@ -145,7 +145,50 @@ h2{
     margin: 10px;
 }
 
-#checked .button-close{
+.mod{
+    margin-top: -48px;
+    background-color: #fff;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
+.loader2 {
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader2.mostrar {
+    display: flex;
+}
+
+@keyframes modal {
+    from {
+        opacity: 0;
+        transform: translate3d(0, -60px, 0);
+    }
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+.mostrar .mod {
+    animation: modal .3s;
+}
+
+/* #checked .button-close{
     display: flex;
     justify-content: flex-end;
     padding: 6px;
@@ -187,4 +230,4 @@ h2{
 }
 #checked .modal-footer {
     border: 0;
-}
+} */
