--- a/css/settings_user.css
+++ b/css/settings_user.css
@@ -7,7 +7,6 @@ h2{
 }
 .content-table{
     display: flex;
-    align-items: center;
     justify-content: center;
 }
 
@@ -21,26 +20,23 @@ h2{
     display: flex;
     flex-direction: row;
     align-items:flex-start;
-    width: 90%;
-    height: 430px;
+    width: 80%;
     background: #f5f5f5;
-    padding: 0px 30px 0px 30px;
+    margin-left: 30px;
 }
 
 .form{
     display: flex;
     flex-direction: column;
+    width: 100%;
     margin: 18px;   
     padding: 24px;
-    width: 60%;
     border-radius: 4px;
 }
 
-.form input{
-    width: 90%;
-}
-
 .form label {
+    display: flex;
+    flex-direction: column;
     font-weight: 700;
     font-size: 18px;
     padding: 6px;
@@ -77,15 +73,13 @@ h2{
 }
 
 .register{
-    height: 215px;
     display: flex;
-    align-items: flex-end;
-    justify-content: center;
+    justify-content: end;
 }
 
-.btn-group{
-    width: 60%;
-    padding: 0px 0px 20px 20px;
+.register .btn-group{
+    width: 30%;
+    padding: 80px 6px 12px 0px;
 }
 
 #btn_salvar{
