--- a/css/sale_registration.css
+++ b/css/sale_registration.css
@@ -50,6 +50,7 @@ h2{
 
 .form input{
     width: 100%;
+    text-align: center;
 }
 
 .form label {
@@ -278,6 +279,13 @@ h2{
 }
 
 #btn_cadastrar{
+    height: 40px;
+    font-weight:600;
+    font-size: 16px;
+    background: #085D8C;
+}
+
+#btn_confirmar{
     height: 40px;
     font-weight:600;
     font-size: 16px;
