--- a/css/sale_registration.css
+++ b/css/sale_registration.css
@@ -100,7 +100,25 @@ h2{
 }
 
 .seller-date label{
-    width: 25%;
+    width: 45%;
+}
+
+.total-general-3{
+    display: flex;
+    width: 100%;
+}
+
+.form .title{
+    margin-top: 30px;
+}
+
+.form h6{
+    margin-top: 6px;
+    margin-bottom: 18px;
+    align-self: center;
+    font-size: 20px;
+    font-weight: 700;
+    color: rgb(0, 53, 83)
 }
 
 .total-general{
