--- a/css/user_management.css
+++ b/css/user_management.css
@@ -26,34 +26,8 @@
 .section-table label{
     margin-bottom: 20px;
 }
-h4{
-    font-size: 19px;
-    color: white;
-    width: auto;
-    margin-bottom: 0;  
-    font-weight: bold;
-}
 
-#div-title{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 35px;
-    align-items: center;
-    justify-content: center;
-    background-color: #085D8C;
-}
-#nome{
-    width: 23%;
-    padding-left: 5px;
-    text-align: start;
 
-}
-#usuario{
-    width: 23%;
-    padding-left: 15px;
-    text-align: start;
-}
 #opcoes{
     width: 55%;
     padding-right: 70px;
@@ -64,6 +38,33 @@ h4{
     overflow: auto;
     height: 350px;
     width: 100%;
+}
+
+.table  th{
+    cursor: pointer;
+}
+
+.table .th-sort-asc::after{
+    content: "\25b4";
+}
+
+.table .th-sort-desc::after{
+    content: "\25be";
+}
+
+.table .th-sort-asc::after,
+.table .th-sort-desc::after{
+    margin: 5px;
+}
+
+.table .th-sort-asc::after,
+.table .th-sort-desc::after{
+    background: rgba(0, 0, 0, 0.1);
+}
+
+#opcoes::after{
+    content: none;
+    
 }
 
 tbody tr{
