colocado hover no botao confirmar da tela cadastro de vendas

--- a/css/sale_registration.css
+++ b/css/sale_registration.css
@@ -291,6 +291,10 @@ h2{
     padding: 6px 12px;
 }
 
+.btn-confirmar:hover{
+    background-color: green;
+}
+
 .paid-pending{
     display: flex;
     margin-top: 6px;
