--- a/css/sale_management.css
+++ b/css/sale_management.css
@@ -305,6 +305,15 @@ table button{
     text-align: center;
 }
 
+.mod .table1{
+    display: flex;
+    text-align: center;
+}
+
+.mod .table1 label{
+    margin-right: -12px;
+}
+
 .mod h6{
     font-size: 18px;
     font-weight: 700;
@@ -344,7 +353,7 @@ table button{
     display: flex;
     flex-direction: column;
     margin-bottom: 18px;
-    padding: 18px;
+    padding: 18px 24px 18px 18px;
 }
 .mod form label {
     font-weight: 600;
