--- a/css/sale_registration.css
+++ b/css/sale_registration.css
@@ -389,31 +389,31 @@ h2{
     margin: 10px;
 }
 
-#checked .button-close{
+#modal-reg .button-close{
     display: flex;
     justify-content: flex-end;
     padding: 6px;
 }
-#checked form{
+#modal-reg form{
     display: flex;
 }
 
-#checked .modal-body{
+#modal-reg .modal-body{
     margin: 0;
     padding-top: 0;
 }
-#checked form{
+#modal-reg form{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-#checked form h1{
+#modal-reg form h1{
     text-align: center;
     color: rgba(130, 130, 130, 1); 
     font-weight: bold;
     font-size: 30px;
 }
-#checked .btn-paraGerenciamento{
+#modal-reg .btn-paraGerenciamento{
     height: 40px;
     font-weight:600;
     font-size: 16px;
@@ -425,16 +425,16 @@ h2{
     border-inline: none;
     padding: 0 24px;
 }
-#checked .btn-links{
+#modal-reg .btn-links{
     display: flex;
     width: 100%;
     justify-content: space-around;
 }
-#checked .modal-content{
+#modal-reg .modal-content{
     cursor: pointer;
     margin-top: 0;
 }
-#checked .modal-footer {
+#modal-reg .modal-footer {
     border: 0;
 }
 
